Fixing the word wrap/ word break issue on mobile devices.

--- a/server/client/app/src/components/css/App.css
+++ b/server/client/app/src/components/css/App.css
@@ -155,7 +155,8 @@
   justify-self: center;
   line-height: 3rem;
   font-size: 1.5rem;
-  /* word-break: break-all; */
+  word-break: break-word;
+  word-wrap: center;
 }
 
 .PostFooter {
